# ligerolight

./: CMakeLists.txt  README.md
ligero/: CMakeLists.txt
ligero/algebra/: exponentiation.hpp  exponentiation.tcc  fft.hpp  fft.tcc  lagrange.hpp  lagrange.tcc  utils.cpp  utils.hpp  utils.tcc
ligero/algebra/field_subset/: basis_utils.hpp  basis_utils.tcc  field_subset.hpp  field_subset.tcc  subgroup.hpp  subgroup.tcc  subspace.hpp  subspace.tcc
ligero/algebra/polynomials/: bivariate_lagrange_polynomial.hpp  bivariate_lagrange_polynomial.tcc  lagrange_polynomial.hpp  lagrange_polynomial.tcc  linearized_polynomial.hpp  linearized_polynomial.tcc  piecewise_polynomial.hpp  polynomial.hpp  polynomial.tcc  vanishing_polynomial.hpp  vanishing_polynomial.tcc
ligero/algebra/trace_embedding/: additive_successor_ordering.tcc  bivariate_embedding.hpp  bivariate_embedding.tcc  multiplicative_successor_ordering.tcc  successor_ordering.hpp  trace_embedding.hpp  trace_embedding.tcc  wrapper_successor_ordering.tcc
ligero/bcs/: Newmerkle.hpp  Newmerkle.tcc  bcs_common.hpp  bcs_common.tcc  bcs_indexer.hpp  bcs_indexer.tcc  bcs_prover.hpp  bcs_prover.tcc  bcs_verifier.hpp  bcs_verifier.tcc  common_bcs_parameters.hpp  common_bcs_parameters.tcc  hash_packing.hpp  hash_packing.tcc  merkle_tree.hpp  merkle_tree.tcc  pow.hpp  pow.tcc
ligero/bcs/BLAKE3/: CMakeLists.txt  debug.cpp  example.c
ligero/bcs/hashing/: algebraic_sponge.hpp  algebraic_sponge.tcc  blake2b.cpp  blake2b.hpp  blake2b.tcc  dummy_algebraic_hash.hpp  dummy_algebraic_hash.tcc  dummy_algebraic_sponge.hpp  hash_enum.hpp  hash_enum.tcc  hashing.hpp  poseidon.hpp  poseidon.tcc  rescue.hpp
ligero/common/: common.cpp  common.hpp  cpp17_bits.hpp
ligero/common/data_structures/: merkle_tree.hpp
ligero/gadgetlib1/: constraint_profiling.cpp  constraint_profiling.hpp  gadget.hpp  gadget.tcc  pb_variable.hpp  pb_variable.tcc  protoboard.hpp  protoboard.tcc
ligero/gadgetlib1/gadgets/: basic_gadgets.hpp  basic_gadgets.tcc  gadget_from_r1cs.hpp  gadget_from_r1cs.tcc
ligero/gadgetlib1/gadgets/hashes/: digest_selector_gadget.hpp  digest_selector_gadget.tcc  hash_io.hpp  hash_io.tcc
ligero/iop/: iop.hpp  iop.tcc  oracles.hpp
ligero/iop/utilities/: batching.cpp  batching.hpp  batching.tcc  query_positions.hpp  query_positions.tcc
ligero/protocols/: fft_circuit_GKR.hpp  fft_circuit_GKR.tcc  fft_circuit_GKR_polynomial.hpp  ligero_iop.hpp  ligero_iop.tcc
ligero/protocols/encoded/ligero/: interactive_RS_test.hpp  (+9 more)
ligero/protocols/ldt/: ldt_reducer.cpp  ldt_reducer.hpp  ldt_reducer.tcc  ldt_reducer_aux.hpp  ldt_reducer_aux.tcc  multi_ldt_base.hpp
ligero/relations/: ligero_matrix.hpp  ligero_matrix.tcc  matrix_gen.hpp  matrix_gen.tcc  r1cs.hpp  r1cs.tcc  signal.hpp  signal.tcc  tacs.hpp  tacs.tcc  tacs_to_r1cs.hpp  tacs_to_r1cs.tcc  variable.hpp  variable.tcc
ligero/relations/example/: example_tacs.hpp  example_tacs.tcc
ligero/tests/: test_PCS.cpp  test_debugg.cpp  test_fri.cpp  test_functions.hpp  test_merkleTree.cpp
(+32 files in other folders)
